--- a/.circleci/k8s.pdx.yml
+++ b/.circleci/k8s.pdx.yml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: nidaba
-          image: registry.repositive.io:5000/nidaba:beta
+          image: registry.repositive.io:5000/nidaba:${TAG}
           env:
             - name: RABBIT_URI
               valueFrom:
