--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,12 +78,12 @@ jobs:
           command: |
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               curl -O -u $DEPLOYMENT_USER:$DEPLOYMENT_PASS https://deployment-server-staging.repositive.io/kubeconfig-staging
-              TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.staging.yml > deploy-staging.yml
+              #              TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.staging.yml > deploy-staging.yml
               TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.pdx-staging.yml > deploy-pdx-staging.yml
                 if git log -1 --pretty=%B | grep "^[0-9]\+\.[0-9]\+\.[0-9]\+$"; then
                   curl -O -u $DEPLOYMENT_USER:$DEPLOYMENT_PASS https://deployment-server-production.repositive.io/kubeconfig-production
                   TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.pdx-production.yml > deploy-pdx-production.yml
-                  TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.production.yml > deploy-production.yml
+                  #                  TAG=$(git describe --abbrev=0).$(git rev-parse --short HEAD) envsubst '${TAG}' < .circleci/k8s.production.yml > deploy-production.yml
                 fi
             fi
 
