Modify CircleCI files to deploy in new dev environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ jobs:
 
   release_pdx-dev:
     environment:
-      - CLUSTER: 'pdx-dev'
+      - CLUSTER: 'dev'
     <<: *deploy_image
 
   release_pdx-staging:
