--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ramda": "^0.24.1"
   },
   "devDependencies": {
-    "@repositive/typescript": "^1.1.2",
+    "@repositive/typescript": "1.1.2",
     "@types/config": "0.0.32",
     "@types/csv-parse": "^1.1.9",
     "@types/node": "^8.0.19",
@@ -57,6 +57,6 @@
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
     "tslint": "^5.5.0",
-    "typescript": "^2.4.2"
+    "typescript": "^3.0.1"
   }
 }
