--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "setup": "npm i && tsc --outDir dist",
     "startDev": "nodemon --watch src/ --watch package.json -e ts,json -q -x 'rm -fr dist && echo \"\\n============\\nCOMPILING...\\n============\\n\\n\" && tsc --outDir dist || return 0 && node .'",
     "testDev": "nodemon --watch src/ --watch package.json -e ts,json -q -x 'rm -fr dist && echo \"\\n============\\nCOMPILING...\\n============\\n\\n\" && tsc --outDir dist || return 0 && tape $(find dist -name '*.spec.js' ! -name 'index.js') | tap-spec'",
-    "make": "rm -fr dist && tsc",
+    "compile": "rm -fr dist && tsc",
     "lint": "tslint -c tslint.json src/**/*.ts",
     "test": "nyc --reporter lcov tape $(find dist -name '*.spec.js' ! -name 'index.js') | tap-spec",
     "coverage": "nyc check-coverage --lines 80 --functions 80 --branches 80"
