--- a/.circleci/k8s.cmp-demo.yml
+++ b/.circleci/k8s.cmp-demo.yml
@@ -10,6 +10,8 @@ spec:
       labels:
         app: nidaba
     spec:
+      nodeSelector:
+        cloud.google.com/gke-nodepool: default-pool
       containers:
         - name: nidaba
           image: registry.repositive.io:5000/nidaba:${TAG}
